# kedro-cats-dogs

./: README.md
cats-dogs/: README.md  pyproject.toml  requirements.txt  session_store.db
cats-dogs/conf/base/: catalog.yml  parameters_classification.yml
cats-dogs/notebooks/: classification.ipynb
cats-dogs/src/cats_dogs/: __init__.py  __main__.py
cats-dogs/src/cats_dogs/pipelines/classification/: __init__.py  nodes.py  pipeline.py
cats-dogs/src/tests/pipelines/classification/: test_pipeline.py
