[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "cats_dogs"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
cats-dogs = "cats_dogs.__main__:main"

[tool.kedro]
package_name = "cats_dogs"
project_name = "Cats Dogs"
kedro_init_version = "0.19.3"
tools = [ "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "cats_dogs.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
